--- a/device_tracker/unifi.yaml
+++ b/device_tracker/unifi.yaml
@@ -5,3 +5,9 @@ host: !secret unifi_host
 # site_id:
 verify_ssl: false
 detection_time: 30
+ssid_filter:
+  - "axalp2"
+  - "axalp5"
+new_device_defaults:
+  track_new_devices: false
+  hide_if_away: false
