--- a/switches/flux.yaml
+++ b/switches/flux.yaml
@@ -1,19 +1,16 @@
 platform: flux
 lights:
+  - light.living_room_under_couch
+  - light.tv_light_bulb
+  - light.computer_lamp_bulb
+  - light.living_room_corner_lamp
+  - light.bedroom_nightstand
+  - light.bedroom_2
+  - light.bedroom_4
+  - light.kitchen_2
+  - light.kitchen_1
   - light.bathroom_ceiling_1
   - light.bathroom_ceiling_2
-  - light.bedroom_nightstand
-  - light.kitchen_1
-  - light.kitchen_2
-  - light.computer_lamp_bulb
-  - light.office_ceiling
-  - light.living_room_ceiling_lamp
-  - light.living_room_4
-  - light.living_room_1
 name: Fluxer
-start_colortemp: 4000
-sunset_colortemp: 3000
-stop_colortemp: 1900
-brightness: 255
 disable_brightness_adjust: True
 mode: xy
