--- a/configuration.yaml
+++ b/configuration.yaml
@@ -191,11 +191,11 @@ wwlln:
 
 # Persons
 person:
-  - name: Steff
-    id: !secret steff_id
-    user_id: !secret steff_user_id
-    device_trackers:
-      - device_tracker.3c_28_6d_2d_3c_67
+#   - name: Steff
+#     id: !secret steff_id
+#     user_id: !secret steff_user_id
+#     device_trackers:
+#       - device_tracker.3c_28_6d_2d_3c_67
 
 ########### INCLUDES #####
 sensor: !include_dir_list sensors/
