--- a/scripts/leaving_home.yaml
+++ b/scripts/leaving_home.yaml
@@ -1,14 +1,18 @@
 leaving_home:
   alias: Leaving Home
   sequence:
-    - service: lock.nuki_lock_n_go
+    - service: nuki.nuki_lock_n_go
       data:
         entity_id: lock.home
         unlatch: false
-    - delay: 30
+    - delay: 0
     - service: script.turn_on
       data:
         entity_id: script.leaving_home_lights_off
+    - delay: 20
     - service: script.turn_on
       data:
-        entity_id: script.leaving_home_lights_on
+        entity_id: script.leaving_home_lights_off
+    # - service: script.turn_on
+    #   data:
+    #     entity_id: script.leaving_home_lights_on
