--- a/automation/system/weather_warning.yaml
+++ b/automation/system/weather_warning.yaml
@@ -17,7 +17,7 @@
         entity_id: sensor.netatmo_outdoormodule_temperature
         below: 4
   action:
-    - service: notify.hangouts
+    - service: notify.html5
       data:
         message: "It's below 4°C! Temp: {{ states('sensor.netatmo_outdoormodule_temperature') }}°C"
 
@@ -28,7 +28,7 @@
       entity_id: sensor.aare_brienzwiler_danger_level
       above: 1
   action:
-    - service: notify.hangouts
+    - service: notify.html5
       data:
         message: "Aare Brienzwiler Danger Level at {{ states('sensor.aare_brienzwiler_danger_level') }}!"
 
@@ -42,6 +42,6 @@
         minutes: 15
         seconds: 0
   action:
-    - service: notify.hangouts
+    - service: notify.html5
       data:
         message: "Hohe Wingeschwindigkeit! {{ states('sensor.windspeed_brienz') }} m/s / {{ (float(states('sensor.windspeed_brienz')) * 3.6) | round(0) }} km/h!"
