Revert "add multiple entities to tv switch for harmony hub"
This reverts commit fd87fa13b84b0d12815c3e541d746e0ab9750e19.

--- a/switches/harmony_tv.yaml
+++ b/switches/harmony_tv.yaml
@@ -3,7 +3,7 @@ switches:
   tv:
     friendly_name: "TV"
     entity_id: remote.harmony_hub
-    value_template: "{{ is_state('remote.harmony_hub', 'on') or is_state('binary_sensor.tv_power_status', 'on')}}"
+    value_template: "{{ is_state('remote.harmony_hub', 'on') }}"
     turn_on:
       service: remote.turn_on
       data:
