Update 0.109.6 with custom components

--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,5 @@ www/backgrounds/wallhaven-1045.jpg
 www/backgrounds/wallhaven-172249.jpg
 www/backgrounds/wallhaven-161989.jpg
 
-custom_components
+sensors/homeassistant_certificate_validity.yaml
+notebooks/
