fixed missing secrets

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -109,6 +109,13 @@ webhook_tv: 004
 webhook_phone_status: 005
 webhook_lock_unlock: 006
 webhook_lock_lock: 007
+## Streamdeck
+webhook_soundbar_mute: 008
+webhook_soundbar_volumeup: 009
+webhook_soundbar_volumedown: 010
+webhook_lights: 011
+webhook_fans: 012
+webhook_remotes: 013
 
 # Nuki Smart Lock
 nuki_host: 127.0.0.1
